Написаны Юнит тесты для бизнес-логики

--- a/ContactsApp.UnitTests/ContactsApp.UnitTests.csproj
+++ b/ContactsApp.UnitTests/ContactsApp.UnitTests.csproj
@@ -57,6 +57,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContactsApp\ContactsApp.csproj">
+      <Project>{5b1209a1-7ce7-4893-b2ab-898660e80337}</Project>
+      <Name>ContactsApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
